[package]
name = "adafruit-seesaw-esp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
# adafruit-seesaw = { version = "0.11.0",features = ["std"], default-features = false}
adafruit-seesaw = { path = "../adafruit-seesaw", features = ["nightly"] }
embedded-hal-bus = { version = "0.3", features = ["std"] }
esp-idf-hal = { version = "0.45" }
esp-idf-svc = { version = "0.51" }
log = { version = "0.4", default-features = false }
shared-bus = { version = "0.3.1", features = ["std"] }


[build-dependencies]
embuild = "0.33"
